done with ishigami

--- a/selected-topics/02-sensitivity-analysis/slides/files/s-quantitative.tex
+++ b/selected-topics/02-sensitivity-analysis/slides/files/s-quantitative.tex
@@ -79,6 +79,13 @@ S^T_i & = \frac{E_{\vec{X} \sim i}[V_{X_i}[Y \mid \vec{X}_{\sim i}]]}{V[Y]} = 1 
 \end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
+\begin{frame}
+\begin{figure}[htp]\centering\caption{Uncertainty propagation}
+\scalebox{0.30}{\includegraphics{material/fig-ishigami-uncertainty-propagation}}
+\end{figure}
+\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 \begin{frame}\textbf{Reference values}\vspace{0.3cm}
 
 \begin{align*}
@@ -95,6 +102,28 @@ S_3 & = 0
 \end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
+\begin{frame}
+
+\begin{figure}[h!]\centering
+\caption{Main effect of input 1}
+
+\scalebox{0.30}{\includegraphics{material/fig-ishigami-main-effect-1}}
+
+\end{figure}
+
+\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
+\begin{frame}
+
+\begin{figure}[h!]\centering
+\caption{Main effect of input 3}
+\scalebox{0.30}{\includegraphics{material/fig-ishigami-main-effect-2}}
+\end{figure}
+
+\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 \begin{frame}\textbf{Total effect}\vspace{0.3cm}
 
 \begin{align*}
@@ -103,5 +132,29 @@ S^T_2 & = \frac{a^2}{8} \; \var(Y)^{-1} \\
 S^T_3 & =  \frac{8 b^2 \pi^8}{225} \; \var(Y)^{-1}
 \end{align*}
 
+
+\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
+\begin{frame}
+
+\begin{figure}[h!]\centering
+\caption{Total effect of input 1}
+
+\scalebox{0.30}{\includegraphics{material/fig-ishigami-total-effect-1}}
+
+\end{figure}
+
+\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
+\begin{frame}
+
+\begin{figure}[h!]\centering
+\caption{Total effect of input 3}
+
+\scalebox{0.30}{\includegraphics{material/fig-ishigami-total-effect-2}}
+
+\end{figure}
 
 \end{frame}
