added missing slides

--- a/selected-topics/03-high-performance-python/notebook.ipynb
+++ b/selected-topics/03-high-performance-python/notebook.ipynb
@@ -4,8 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multiprocessing\n",
-    "\n"
+    "# High-performance computing in Python\n",
+    "\n",
+    "\n",
+    "### Missing\n",
+    "\n",
+    "* Numba"
    ]
   },
   {
@@ -14,17 +18,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from functools import partial\n",
+    "import multiprocessing as mp\n",
     "import itertools\n",
     "import sys\n",
     "import os\n",
     "\n",
-    "\n",
     "sys.path.insert(0, \"../02-sensitivity-analysis/python\")\n",
+    "sys.path.insert(0, \"python\")\n",
     "\n",
-    "import multiprocessing as mp\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from ishigami import *\n",
+    "import numpy as np\n",
+    "\n",
+    "from ishigami import compute_simulation_total_effect\n",
+    "from ishigami import compute_simulation_main_effect\n",
+    "from ishigami import evaluate_ishigami_readable\n",
+    "from ishigami import evaluate_ishigami\n",
+    "\n",
+    "from auxiliary import task_mp_no_communication\n",
+    "from auxiliary import evaluate_ishigami_loop\n",
+    "from auxiliary import task_mp_management\n",
+    "from auxiliary import task_mp_queue\n",
     "from functools import partial"
    ]
   },
@@ -36,30 +50,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can compare the implementation of a for loop with a vectorized counterparts for a set of random input parameters."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_draws = 10\n",
+    "inputs = np.random.uniform(low=-np.pi, high=np.pi, size=(num_draws, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use some build-in functionality for some basic benchmarking."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "644 µs ± 20.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
-      "19.1 µs ± 484 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "78.5 µs ± 4.68 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "9.28 µs ± 71.6 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "seed, num_draws = 1, 100\n",
-    "np.random.seed(seed)\n",
-    "inputs = np.random.uniform(low=-np.pi, high=np.pi, size=(num_draws, 3))\n",
-    "\n",
-    "def evaluate_ishigami_loop(inputs):\n",
-    "    for input_ in inputs:\n",
-    "        evaluate_ishigami_readable(input_)\n",
-    "\n",
     "%timeit evaluate_ishigami_loop(inputs)\n",
     "%timeit evaluate_ishigami(inputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to set up tests wherever possible."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.testing.assert_equal(evaluate_ishigami_loop(inputs), evaluate_ishigami(inputs))"
    ]
   },
   {
@@ -72,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,39 +153,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_outer = num_inner = 100\n",
+    "task_partial = partial(task_mp_no_communication, num_outer, num_inner)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "... started on input parameter 0\n",
       "... started on input parameter 1\n",
+      "... started on input parameter 0\n",
       "... started on input parameter 2\n",
-      "... finished input parameter 2\n",
       "... finished input parameter 0\n",
-      "... finished input parameter 1\n"
+      "... finished input parameter 1\n",
+      "... finished input parameter 2\n"
      ]
     }
    ],
    "source": [
-    "num_outer, num_inner = 10000, 1000\n",
+    "processes = list()\n",
+    "for which in range(3):\n",
+    "    p = mp.Process(target=task_partial, args=(which, ))\n",
+    "    processes.append(p)\n",
     "\n",
-    "import multiprocessing\n",
-    "\n",
-    "def task(num_outer, num_inner, which):\n",
-    "    \n",
-    "    print(f\"... started on input parameter {which}\")\n",
-    "    rslt = compute_simulation_main_effect(num_outer, num_inner, which)\n",
-    "    print(f\"... finished input parameter {which}\")\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    jobs = []\n",
-    "    for which in range(3):\n",
-    "        p = mp.Process(target=task, args=(num_outer, num_inner, which))\n",
-    "        jobs.append(p)\n",
-    "        p.start()"
+    "# We can execute our work.\n",
+    "[p.start() for p in processes]\n",
+    "[p.join() for p in processes];"
    ]
   },
   {
@@ -151,40 +199,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.31568004510111963, 0.45194103402865243, 0.0010100507352421427]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def task(num_outer, num_inner, which, qout):\n",
-    "    rslt = compute_simulation_main_effect(num_outer, num_inner, which)\n",
-    "    qout.put((which, rslt))\n",
+    "# We need to prepare a container for communication.\n",
+    "qout = mp.Queue()\n",
     "\n",
-    "if __name__ == '__main__':\n",
-    "    \n",
-    "    processes = []\n",
-    "    qout = mp.Queue()\n",
-    "    \n",
-    "    for which in range(3):\n",
-    "        p = mp.Process(target=task, args=(num_outer, num_inner, which, qout))\n",
-    "        processes.append(p)\n",
-    "        \n",
-    "    for p in processes:\n",
-    "        p.start()\n",
+    "task_partial = partial(task_mp_queue, num_outer, num_inner, qout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "    for p in processes:\n",
-    "        p.join()\n",
-    "        \n",
-    "    unsorted_result = [qout.get() for p in processes]\n",
-    "    result = [t[1] for t in sorted(unsorted_result)] \n",
-    "    print(result)"
+    "\n",
+    "# We can prepare our work.\n",
+    "processes = []\n",
+    "for which in range(3):\n",
+    "    p = mp.Process(target=task_partial, args=(which, ))\n",
+    "    processes.append(p)\n",
+    "    \n",
+    "# We can execute our work.\n",
+    "[p.start() for p in processes]\n",
+    "[p.join() for p in processes]\n",
+    "    \n",
+    "# We need to ensure that we have a unique\n",
+    "# order of the results.\n",
+    "unsorted_result = [qout.get() for p in processes]\n",
+    "result = [t[1] for t in sorted(unsorted_result)] \n",
+    "print(result)"
    ]
   },
   {
@@ -196,31 +243,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "... started on input parameter 0\n",
-      "... started on input parameter 1\n",
-      "... started on input parameter 2\n",
-      "... finished input parameter 2\n",
-      "... finished input parameter 0\n",
-      "... finished input parameter 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def task(num_outer, num_inner, which):\n",
-    "    \n",
-    "    print(f\"... started on input parameter {which}\")\n",
-    "    rslt = compute_simulation_main_effect(num_outer, num_inner, which)\n",
-    "    print(f\"... finished input parameter {which}\")\n",
-    "    \n",
-    "pool = mp.Pool(processes = 3)\n",
-    "task_partial = partial(task, num_outer, num_inner)\n",
+    "task_partial = partial(task_mp_no_communication, num_outer, num_inner)\n",
+    "\n",
+    "pool = mp.Pool(processes=3)\n",
     "pool.map(task_partial, range(3))\n",
     "\n",
     "pool.close()\n",
@@ -229,67 +258,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "working on main effect for input 0\n",
-      "working on main effect for input 1\n",
-      "working on main effect for input 2\n",
-      "working on total effect for input 0\n",
-      "working on total effect for input 1\n",
-      "working on total effect for input 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def task_manager(num_outer, num_inner, task):\n",
-    "    label, which = task\n",
-    "    print(f\"working on {label} effect for input {which}\")\n",
-    "    if label == \"main\":\n",
-    "        return compute_simulation_main_effect(num_outer, num_inner, which)\n",
-    "    elif label == \"total\":\n",
-    "        return compute_simulation_total_effect(num_outer, num_inner, which)\n",
-    "    else:\n",
-    "        raise NotImplementedError\n",
+    "task_partial = partial(task_mp_management, num_outer, num_inner)\n",
     "\n",
     "tasks = list(itertools.product([\"main\", \"total\"], range(3)))\n",
     "\n",
-    "task_manager_partial = partial(task_manager, num_outer, num_inner)\n",
-    "\n",
-    "pool = mp.Pool(processes = 3)\n",
-    "rslt = pool.map(task_manager_partial, tasks)\n",
+    "pool = mp.Pool(processes=3)\n",
+    "rslt = pool.map(task_partial, tasks)\n",
     "\n",
     "pool.close()\n",
     "pool.join()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.31568004510111963,\n",
-       " 0.45194103402865243,\n",
-       " 0.0010100507352421427,\n",
-       " 0.5560154110550138,\n",
-       " 0.4445671468004033,\n",
-       " 0.24627081586804012]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rslt"
    ]
   },
   {
